<resources>
    <string name="app_name">HomeHandy</string>
    <string name="welcome">Hi, welcome</string>
    <string name="enter_mobile">Enter your phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="login">Login</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="_continue">Continue</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="orders">Orders</string>
    <string name="customers">Customers</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="total_orders">Total \nOrders</string>
    <string name="total_customers">Total \nCustomers</string>
    <string name="all_services">All Services</string>
    <string name="all_orders">All Orders</string>
    <string name="_4_orders_pending">4 Orders Pending</string>
    <string name="add_new_service">add new service</string>
    <string name="service_name">Service Name</string>
    <string name="service_desc">Service Description</string>
    <string name="regular_price">Regular Price</string>
    <string name="advance_price">Advance Price</string>
    <string name="submit">SUBMIT</string>
    <string name="service_details">Service Details</string>
    <string name="types_colon">Types :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_customers">All Customers</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="app_name_space">Home Handy</string>
    <string name="explore_services">Explore Our Services</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="choose_types">Choose Service Type</string>
    <string name="regular">Regular</string>
    <string name="description">Description</string>
    <string name="advance">Advance</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="cart_total">Cart Total</string>
    <string name="checkout">CHECKOUT</string>
    <string name="cart_items">Cart Items</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="address">Address</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="select_image">Select Image</string>
    <string name="customer_name">Customer Name</string>
    <string name="service_type">Service Type</string>
    <string name="amount">Amount</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="order_status">Order Status</string>
    <string name="a_z">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="item_total">Item Total</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="no_orders">No Orders Found</string>
    <string name="done">Done</string>
    <string name="remove">Remove</string>
    <string name="select_date">Select Date</string>
    <string name="select_delivery_datetime">Select Delivery Date and Time</string>
    <string name="online">Online</string>
    <string name="cod">COD</string>
    <string name="pay_mode">Payment Mode</string>
    <string name="rate_our_service">Rate Our Service :</string>
    <string name="rate">Rate</string>
    <string name="employees">Employees</string>
    <string name="all_employees">All Employees</string>
</resources>