<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/dashboard"/>
    <item
        android:id="@+id/menu_orders"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/orders"/>
    <item
        android:id="@+id/menu_customer"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/customers"/>
    <item
        android:id="@+id/menu_employees"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"
        android:title="@string/employees"/>
</menu>