<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.CartFragment">

    <LinearLayout
        android:id="@+id/cartEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_empty"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cart_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cart_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/cart"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cart_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cart_title"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/cart_items"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cart_text" />

        <LinearLayout
            android:id="@+id/item_total_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recyclerView"
            android:orientation="horizontal"
            android:paddingHorizontal="14dp"
            android:paddingTop="14dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_total"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/cart_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_total_c"
            android:layout_marginStart="14dp"
            android:paddingTop="8dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:paddingHorizontal="14dp"
                android:text="@string/pay_mode"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/price_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:checkedButton="@+id/cod"
                android:paddingHorizontal="14dp"
                android:paddingBottom="8dp">

                <RadioButton
                    android:id="@+id/cod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cod"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/online"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/online"
                    android:textSize="20dp" />
            </RadioGroup>

            <Button
                android:id="@+id/checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/checkout"
                app:cornerRadius="0dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>