<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    tools:context=".admin.AddServiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/service_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="14dp"
            android:text="@string/select_image"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_name_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/service_name"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/service_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/a_z"
                android:inputType="text"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_desc_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/service_desc"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/service_desc_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="4"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regular_price_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regular_price"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regular_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/advance_price_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/advance_price"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/advance_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:padding="14dp"
            android:text="@string/submit"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>