<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context=".admin.AddServiceActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_name"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:placeholderTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_email"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:placeholderTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_address"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:placeholderTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pincode_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_pincode"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:placeholderTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pincode_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:enabled="false"
            android:text="410201"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:padding="14dp"
        android:text="@string/submit"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>